silverbullet/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silverbullet
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      containers:
        - name: silverbullet
          image: silverbullet
          ports:
            - { name: http, containerPort: 3000 }
          volumeMounts:
            - name: space
              mountPath: /space
          resources:
            requests: { cpu: 10m, memory: 64Mi }
            limits: { cpu: 1000m, memory: 256Mi }

      volumes:
        - name: space
          persistentVolumeClaim: { claimName: silverbullet-space-pvc }
